[package]
name = "kvs"
version = "0.1.0"
authors = ["strohs <strohs1@gmail.com>"]
description = "a key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
crossbeam = "0.8.1"
rayon = "1.5.1"
dashmap = "5.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2.0"
sled = "0.34.7"


[dev-dependencies]
assert_cmd = "0.11.0"
crossbeam-utils = "0.8.5"
criterion = "0.3"
panic-control = "0.1.4"
predicates = "1.0.0"
rand = { version = "0.8", features = ["small_rng"] }
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
test = false
doctest = true

[[bin]]
name = "kvs-client"
test = false
doctest = false

[[bin]]
name = "kvs-server"
test = false
doctest = false


[[bench]]
name = "engine_bench"
harness = false